--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@tanstack/react-query": "^5.69.0",
     "antd": "^5.24.3",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^6.28.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.28.0",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
